Fixed contact form alignment

--- a/css/main.css
+++ b/css/main.css
@@ -47,6 +47,14 @@ html {
   color: var(--offwhite);
 }
 
+.centerbutton{
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  margin-top: 40px;
+  margin-bottom: 70px;
+}
+
 .button2{
   background-color: var(--button);
   color: var(--black);
@@ -765,6 +773,7 @@ footer img {
 .contactform{
   text-align: center;
   margin-left: auto;
+  display:flex;
   justify-content: center;
   max-width: 74ch;
   margin-right: auto;
@@ -795,7 +804,6 @@ input{
 
 input,
 label {
-  margin-left: -19px;
   margin-top: 15px;
   margin-bottom: 15px;
 }
